🐛 Fix Table column align in windows chrome (#19986)
close #19952

--- a/components/table/style/index.less
+++ b/components/table/style/index.less
@@ -660,7 +660,12 @@
     // https://stackoverflow.com/a/54101063
     // https://github.com/react-component/table/pull/333
     scrollbar-color: transparent transparent;
+    min-width: unset;
+
     &::-webkit-scrollbar {
+      // set min width to window chrome scrollbar
+      // https://github.com/ant-design/ant-design/issues/19952#issuecomment-559367149
+      min-width: inherit;
       background-color: transparent;
     }
   }
